# suvtk

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs.yml  publish.yml  release.yml  test.yml
_modules/: index.html
_modules/suvtk/: cli.html  co_occurrence.html  download_database.html  features.html  table2asn.html  taxonomy.html  utils.html  virus_info.html
_sources/: index.rst.txt
_sources/help/: comments.md.txt  features.md.txt  gbk2tbl.md.txt  links.md.txt  taxonomy.md.txt
_static/: documentation_options.js
docs/: conf.py  index.rst
docs/help/: co-occurrence.md  comments.md  features.md  table2asn.md  typical-workflow.md
help/: co-occurrence.html  comments.html  features.html  gbk2tbl.html  links.html  segment-info.html  table2asn.html  taxonomy.html  typical-workflow.html  virus-info.html
source/: modules.html  suvtk.html
suvtk/: cli.py  co_occurrence.py  comments.py  download_database.py  features.py  gbk2tbl.py  table2asn.py  taxonomy.py  utils.py  virus_info.py
tests/: test_suvtk.py
