[project]
name = "suvtk"
version = "0.1.6"
description = "Tool to submit viral sequences to Genbank."
readme = "README.md"
authors = [{name = "Lander De Coninck"}]
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
dependencies = [
    "biopython>=1.83",
    "click",
    "numpy>1.24.4",
    "pandas>=2.2.3",
    "psutil>=7.1.3",
    "pyrodigal-gv>=0.3.2",
    "requests>=2.32.3",
    "scipy>=1.13.1",
    "taxopy>=0.14.0",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "suvtk"
module-root = ""

[dependency-groups]
dev = [
    "cli-test-helpers>=4.1.0",
    "pytest>=8.3.4",
]

[project.urls]
Homepage = "https://github.com/LanderDC/suvtk"
Changelog = "https://github.com/LanderDC/suvtk/releases"
Issues = "https://github.com/LanderDC/suvtk/issues"
CI = "https://github.com/LanderDC/suvtk/actions"

[project.scripts]
suvtk = "suvtk.cli:cli"

[project.optional-dependencies]
test = ["pytest"]


