[project]
name = "suvtk"
version = "0.1.6.post5"
description = "Tool to submit viral sequences to Genbank."
readme = "README.md"
authors = [{name = "Lander De Coninck"}]
license = {file = "LICENSE"}
requires-python = ">=3.10,<3.14"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
dependencies = [
    "biopython>=1.83",
    "click>=8.3.1",
    "numpy>1.24.4",
    "pandas>=2.2.3",
    "psutil>=7.1.3",
    "pyrodigal-gv>=0.3.2",
    "pyrodigal-rv>=0.1.0",
    "requests>=2.32.3",
    "rich-click>=1.9.4",
    "scipy>=1.13.1",
    "taxopy>=0.14.0",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "suvtk"
module-root = ""

[dependency-groups]
dev = [
    "cli-test-helpers>=4.1.0",
    "pytest>=8.3.4",
]

[project.urls]
Homepage = "https://github.com/LanderDC/suvtk"
Changelog = "https://github.com/LanderDC/suvtk/releases"
Issues = "https://github.com/LanderDC/suvtk/issues"
CI = "https://github.com/LanderDC/suvtk/actions"

[project.scripts]
suvtk = "suvtk.cli:cli"

[project.optional-dependencies]
test = ["pytest", "cli-test-helpers"]

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["osx-64"]

[tool.pixi.pypi-dependencies]
suvtk = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
mmseqs2 = ">=18.8cc5c,<19"
table2asn = ">=1.28.1179,<2"
